# VnaDataTool

./: CMakeLists.txt  README.md  version.h.in  vnadatatool.h
include/: fileexception.h  libsetting.h  polar.h  touchstoneV11.h  touchstoneV20.h  typedef.h
src/: touchstoneV11.cpp  touchstoneV20.cpp
testsuite/: CMakeLists.txt  main.cpp
